--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
     "axios": "^1.6.3",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "^12.5.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "font": "^0.0.4",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^4.12.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "^13.6.3",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2"
   },
   "devDependencies": {
