--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^4.12.6",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
