--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "font": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
     "react-native-paper": "^4.12.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
